# android-sonkupik

./: .gitattributes  .gitignore  BUILD_AND_INSTALL_CLICK.bat  BUILD_DEBUG_CLICK.bat  README_ONE_CLICK_BUILD.txt  build-debug.ps1  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/masari/sonkupik/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: arsonkupik_android_jni.cpp
app/src/main/java/com/masari/arsonkupik/audio/: ArSonKuPikAudioProcessorSketch.kt  ArSonKuPikNative.kt  ArSonKuPikSmartMusicEngine.kt  AudioLibraryScanner.kt  PresetCatalog.kt
app/src/main/java/com/masari/arsonkupik/ui/: DesignTokens.kt
app/src/main/java/com/masari/sonkupik/: MainActivity.kt
app/src/main/java/com/masari/sonkupik/ui/player/: SonkuPikPlayerScreen.kt
app/src/main/java/com/masari/sonkupik/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_import_music.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/masari/sonkupik/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
